[package]
name = "yeti"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = "1.22.0"
im = "15.1.0"
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6.20"
reqwest = "0.11.22"
spin = "0.9.8"
rusqlite = { version = "0.29.0", features = ["bundled"] }
crossterm = "0.27"
hyper = { version = "0.14.24", features = ["stream"] }
