[package]
name = "yeti"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = "1.22.0"
im = "15.1.0"
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6.20"
reqwest = { version = "0.11.22", features = ["json"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
crossterm = "0.27"
hyper = { version = "0.14.24", features = ["stream"] }
serde = "1.0.190"
serde_qs = "0.12"
serde_json = "1.0"
async-recursion = "1.0.5"
httpdate = "1.0.3"
