[package]
name = "yeti"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
im = "15.1.0"
tokio = { version = "1.33.0", features = ["full"] }
compiler = { path = "./compiler" }
http = { path = "./http" }
html = { path = "./html" }
sql = { path = "./sql" }
json = { path = "./json" }
toml = { path = "./toml" }
yaml = { path = "./yaml" }
base = { path = "./base" }
io = { path = "./io" }
repl = { path = "./repl" }
transformer = { path = "./transformer" }

[workspace]
members = [
  "compiler",
  "http",
  "html",
  "sql",
  "json",
  "toml",
  "yaml",
  "base",
  "io",
  "repl",
  "transformer"
]
