[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = "1.22.0"
im = "15.1.0"
tokio = { version = "1.33.0", features = ["full"] }
serde = "1.0.190"
async-recursion = "1.0.5"
futures = "0.3.29"
async-channel = "2.1.1"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[lib]
path = "src/lib.rs"
