[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
futures = "0.3.29"
hyper = { version = "0.14.24", features = ["stream"] }
im = "15.1.0"
reqwest = { version = "0.11.22", features = ["json"] }
rug = "1.22.0"
tokio = { version = "1.33.0", features = ["full"] }
serde_qs = "0.12"
serde_json = "1.0"
httpdate = "1.0.3"
compiler = { path = "../compiler" }

[lib]
path = "src/lib.rs"
