[package]
name = "sql"
version = "0.1.0"
edition = "2021"

[dependencies]
im = "15.1.0"
rug = "1.22.0"
tokio = { version = "1.33.0", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
compiler = { path = "../compiler" }
base = { path = "../base" }

[lib]
path = "src/lib.rs"
